# Inventory_System_cpp

./: CMakeLists.txt  README.md  Resource.qrc  addcategory.cpp  addcategory.h  addcategory.ui  additem.cpp  additem.h  additem.ui  addsupplier.cpp  addsupplier.h  addsupplier.ui  databaseheader.h  findcategory.cpp  findcategory.h  findcategory.ui  finditem.cpp  finditem.h  finditem.ui  findsupplier.cpp  findsupplier.h  findsupplier.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
1 Database/: Inventory.db  Inventory.sqbpro
include/: Food.h  Snake.h
src/: Food.cpp  Snake.cpp
